Changing color and fix alignment

--- a/css/base.css
+++ b/css/base.css
@@ -438,7 +438,7 @@ textarea {
     max-width: 1200px; 
     margin: 0 auto;
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
 }
 
